syntax = "proto3";


import "google/protobuf/timestamp.proto";

option go_package="/api";

// Task type
enum PtTaskType {
    // Local task type
    LOCAL = 0;

    // Distribution task type
    DISTRIBUTION = 1;

}

// Task status
enum PtLaunchedTaskStatus {
    // Task is pending
    PENDING = 0;

    // Task is running
    RUNNING = 1;

    // Task is finished
    FINISHED = 2;

    // Task is failed
    FAILED = 3;

    // Task is failed
    CENCELED = 4;
}

// Status of provisioning workflow
enum StatusWorkflow {

    // Workflow is provisioning
    PROVISIONING = 0;

    // Workflow is provisioning finished
    PROVISIONING_FINISHED = 1;

    // Workflow is provisioning failed
    PROVISIONING_FAILED = 2;

}

// Traffic for the task
message PtTaskRequestTracffic {
    // Region for the traffic
    string region = 1;

    // Percent for the traffic
    int32 pecent = 2;
}

// Scripts for the task
message PtTaskRequestScript {
    // Script name
    optional string name = 1;
    // Script type: file, zip, gz, tar, etc; "file is default"
    optional string type = 2;

    // Script content
    string data = 3;
}

// Task for performance test
message PtTaskRequest {
    // Total users to be stimulated in test
    int32 total_users = 1;
    // Duration for test
    int32 duration = 2;
    // Ramp up time for test
    int32 ramp_up = 3;
    // The url of target site
    optional string target_url = 4;

    // Task type for perforamnce test: Local, or Distribution
    PtTaskType type = 6;

    // Traffics arragement
    repeated PtTaskRequestTracffic traffics = 10;

    // Scripts for the task
    PtTaskRequestScript scripts = 20;
}

// Launched Task for performance test with status and links
message PtLaunchedTask {
    // Task id
    string correlationId = 1;
    // Task
    PtTaskRequest task = 2;

    // Task status
    PtLaunchedTaskStatus task_status = 3;

    // Status of provisioning workflow 
    StatusWorkflow provision_status = 4;

    // Created time
    google.protobuf.Timestamp created = 6;

    // Finished time
    optional google.protobuf.Timestamp finished = 7;

    // last updated time
    optional google.protobuf.Timestamp last_updated = 8;

    // Link to metrics dashboard
    optional string metrics_link = 10;
    // Link to logs
    optional string logs_link = 11;
    // Link to download the test results
    optional string download_link = 12;
}

// Task list for performance test
message PtLaunchedTaskList {
    // Task to be created
    repeated PtLaunchedTask launched_tasks = 1;
}


